Add trailing min profit floor

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ PROFIT_TARGET_BPS=300
 PROFIT_CONFIRM_TICKS=2
 TRAILING_START_PCT=8
 TRAILING_GAP_PCT=4
+TRAILING_MIN_PROFIT_PCT=3
 
 TRADE_ALLOC_PCT=88
 STEP_SOL_PCT=15,25,60
