--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ TARGET_MINT=
 
 BUY_PRIORITY_FEE_LAMPORTS=0
 SELL_PRIORITY_FEE_LAMPORTS=0
+SELL_PRIORITY_FEE_STEP_LAMPORTS=2000
+SELL_PRIORITY_FEE_CAP_LAMPORTS=20000
 BUY_SLIPPAGE_BPS=100
 BUY_SLIPPAGE_STEP_BPS=25
 BUY_SLIPPAGE_CAP_BPS=500
